--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/todolist">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.wharareyouupto2.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/todocalendar"
+        android:name="com.example.wharareyouupto2.ui.todocalendar.ToDoCalendarFragment"
+        android:label="@string/todocalendar"
+        tools:layout="@layout/fragment_todocalendar" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.wharareyouupto2.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/todolist"
+        android:name="com.example.wharareyouupto2.ui.todolist.ToDoListFragment"
+        android:label="@string/todolist"
+        tools:layout="@layout/fragment_todolist" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.wharareyouupto2.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/donelist"
+        android:name="com.example.wharareyouupto2.ui.donelist.DoneListFragment"
+        android:label="@string/donelist"
+        tools:layout="@layout/fragment_donelist" />
 </navigation>
