--- a/app/src/main/res/layout/fragment_todocalendar.xml
+++ b/app/src/main/res/layout/fragment_todocalendar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.ToDoCalendarFragment">
+    tools:context=".ui.view.fragment.ToDoCalendarFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
