--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,58 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item"
-    android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:orientation="horizontal">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="memo"
+            type="com.example.wharareyouupto2.model.Memo" />
+    </data>
 
     <LinearLayout
+        android:id="@+id/item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:orientation="vertical">
+        android:layout_height="75dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:checked="@{memo.check}"
             android:layout_gravity="center_vertical"
-            android:text="title"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="25sp" />
+            android:layout_marginStart="5dp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="5dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/mintime"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="mintime"
-                android:textSize="15sp" />
+                android:layout_gravity="center_vertical"
+                android:text="title"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="5dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/maxtime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="maxtime"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/mintime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="mintime"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-" />
+
+                <TextView
+                    android:id="@+id/maxtime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="maxtime"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</layout>
