--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -51,23 +50,50 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/mintime"
+                    android:id="@+id/minhour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="mintime"
+                    android:text="hour"
                     android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-" />
+                    android:text=":" />
 
                 <TextView
-                    android:id="@+id/maxtime"
+                    android:id="@+id/minminute"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="maxtime"
+                    android:text="minute"
                     android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:text="~" />
+
+                <TextView
+                    android:id="@+id/maxhour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="hour"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":" />
+
+                <TextView
+                    android:id="@+id/maxminute"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="minute"
+                    android:textSize="15sp" />
+
             </LinearLayout>
 
         </LinearLayout>
