--- a/app/src/main/res/layout/activity_to_do_add.xml
+++ b/app/src/main/res/layout/activity_to_do_add.xml
@@ -101,6 +101,7 @@
             android:layout_gravity="right"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
+            android:text="@{EditViewModel.textcount}"
             android:textStyle="bold" />
 
         <LinearLayout
