--- a/app/src/main/res/layout/activity_to_do_add.xml
+++ b/app/src/main/res/layout/activity_to_do_add.xml
@@ -89,7 +89,6 @@
                 android:singleLine="true"
                 android:background="@null"
                 android:maxLength="12"
-                android:text="@={EditViewModel.myText}"
                 android:onTextChanged="@{EditViewModel.onTextChanged}"/>
 
         </androidx.cardview.widget.CardView>
@@ -101,7 +100,7 @@
             android:layout_gravity="right"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
-            android:text="@{EditViewModel.textcount}"
+            android:text="@={EditViewModel.textwatcher}"
             android:textStyle="bold" />
 
         <LinearLayout
