--- a/app/src/main/res/layout/activity_to_do_add.xml
+++ b/app/src/main/res/layout/activity_to_do_add.xml
@@ -216,7 +216,8 @@
                 tools:ignore="TouchTargetSizeCheck"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:maxLength="50" />
+                android:maxLength="50"
+                android:onTextChanged="@{EditViewModel.onTextChanged2}"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -225,7 +226,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="0 / 50"
+            android:text="@={EditViewModel.textwatcher2}"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
             android:textStyle="bold" />
