--- a/app/src/main/res/layout/activity_to_do_add.xml
+++ b/app/src/main/res/layout/activity_to_do_add.xml
@@ -89,7 +89,7 @@
                 android:singleLine="true"
                 android:background="@null"
                 android:maxLength="12"
-                android:onTextChanged="@{EditViewModel.onTextChanged}"/>
+                android:onTextChanged="@{EditViewModel.titleTextChanged}"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -100,7 +100,7 @@
             android:layout_gravity="right"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
-            android:text="@={EditViewModel.textwatcher}"
+            android:text="@={EditViewModel.titlewatcher}"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -217,7 +217,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:maxLength="50"
-                android:onTextChanged="@{EditViewModel.onTextChanged2}"/>
+                android:onTextChanged="@{EditViewModel.contentTextChanged}"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -226,7 +226,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="@={EditViewModel.textwatcher2}"
+            android:text="@={EditViewModel.contentwatcher}"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
             android:textStyle="bold" />
