--- a/app/src/main/res/layout/activity_to_do_inside.xml
+++ b/app/src/main/res/layout/activity_to_do_inside.xml
@@ -39,6 +39,14 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <ImageView
+                            android:id="@+id/image"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_launcher_background"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginStart="10dp"/>
+
                         <TextView
                             android:id="@+id/content"
                             android:layout_width="match_parent"
